web: Stop scroll-to-refresh on Chrome
Adds the CSS necessary to stop Chrome from refreshing on mobile when you
pull the page too far down.

--- a/web/pucxobot.css
+++ b/web/pucxobot.css
@@ -1,6 +1,7 @@
 body {
     background-color: #009688;
     font-family: sans-serif;
+    overscroll-behavior-y: contain;
 }
 
 #welcomeOverlay {
